--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "vue-slick-carousel": "^1.0.6",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
+    "install": "^0.13.0",
+    "npm": "^8.8.0",
     "postcss": "^8.4.4"
   }
 }
