--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nuxtjs/tailwindcss": "^4.2.1",
     "install": "^0.13.0",
     "npm": "^8.8.0",
-    "postcss": "^8.4.4"
+    "postcss": "^8.4.4",
+    "sass": "^1.51.0",
+    "sass-loader": "10.1.1"
   }
 }
